# llama-bot

./: Cargo.toml  README.org  flake.nix
nix/: default.nix
src/: main.rs
src/bot/: mod.rs
