[package]
name = "llama-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
matrix-sdk = { version = "0.10.0", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
